---
source: mbtiles/tests/copy.rs
expression: actual_value
---
- type: table
  tbl_name: metadata
  sql: "CREATE TABLE metadata (\n    name TEXT NOT NULL PRIMARY KEY,\n    value TEXT\n)"
  values:
    - "(  \"agg_tiles_hash\", \"3BCDEE3F52407FF1315629298CB99133\"  )"
    - "(  \"hash_algorithm\", \"md5\"  )"
    - "(  \"md-edit\", \"value - v2\"  )"
    - "(  \"md-new\", \"value - new\"  )"
    - "(  \"md-same\", \"value - same\"  )"
- type: table
  tbl_name: tiles_data
  sql: "CREATE TABLE tiles_data (\n    tile_data_id INTEGER PRIMARY KEY,\n    tile_data BLOB\n)"
  values:
    - "(  1, blob()  )"
    - "(  2, blob(1-keep-1-rm)  )"
    - "(  3, blob(edit-v2)  )"
    - "(  4, blob(edit-v2a)  )"
    - "(  5, blob(new)  )"
    - "(  6, blob(not-empty)  )"
    - "(  7, blob(root)  )"
    - "(  8, blob(same)  )"
- type: table
  tbl_name: tiles_shallow
  sql: "CREATE TABLE tiles_shallow (\n    zoom_level INTEGER,\n    tile_column INTEGER,\n    tile_row INTEGER,\n    tile_data_id INTEGER,\n    PRIMARY KEY (zoom_level, tile_column, tile_row)\n) WITHOUT ROWID"
  values:
    - "(  3, 6, 7, 7  )"
    - "(  5, 0, 0, 8  )"
    - "(  5, 0, 1, 1  )"
    - "(  5, 1, 1, 3  )"
    - "(  5, 1, 2, 6  )"
    - "(  5, 1, 3, 1  )"
    - "(  5, 3, 7, 5  )"
    - "(  5, 3, 8, 5  )"
    - "(  6, 0, 3, 8  )"
    - "(  6, 0, 5, 2  )"
    - "(  6, 1, 4, 4  )"
- type: index
  tbl_name: metadata
  sql: ~
  values: ~
- type: view
  tbl_name: tiles
  sql: "CREATE VIEW tiles AS\nSELECT\n    tiles_shallow.zoom_level,\n    tiles_shallow.tile_column,\n    tiles_shallow.tile_row,\n    tiles_data.tile_data\nFROM tiles_shallow\nINNER JOIN tiles_data ON tiles_shallow.tile_data_id = tiles_data.tile_data_id"
  values: ~
